[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/themes/Pink_Theme.tres" type="Theme" id=1]
[ext_resource path="res://ProjectManager/ProjectManager.gd" type="Script" id=2]
[ext_resource path="res://ProjectManager/Toolbar.gd" type="Script" id=3]
[ext_resource path="res://Assets/png/minus.png" type="Texture" id=4]
[ext_resource path="res://Assets/png/cross.png" type="Texture" id=5]
[ext_resource path="res://Assets/fonts/Crushed-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/fonts/Dosis-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.741176, 0.968627, 0.411765 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 122.0
content_margin_right = 122.0
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 1
border_color = Color( 0.913725, 0.266667, 0.556863, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 122.0
content_margin_right = 122.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 7.0
content_margin_right = 7.0
content_margin_top = 7.0
content_margin_bottom = 7.0
bg_color = Color( 0.988235, 0.894118, 0.988235, 1 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 13
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 7 )

[node name="ProjectManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MainCont" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ToolbarMargin" type="MarginContainer" parent="MainCont"]
margin_right = 660.0
margin_bottom = 31.0
custom_constants/margin_right = 5
custom_constants/margin_top = 1

[node name="Toolbar" type="HBoxContainer" parent="MainCont/ToolbarMargin"]
margin_top = 1.0
margin_right = 655.0
margin_bottom = 31.0
custom_constants/separation = 11
alignment = 2
script = ExtResource( 3 )

[node name="Minimize" type="ToolButton" parent="MainCont/ToolbarMargin/Toolbar"]
margin_left = 584.0
margin_right = 614.0
margin_bottom = 30.0
mouse_filter = 1
icon = ExtResource( 4 )

[node name="Close" type="ToolButton" parent="MainCont/ToolbarMargin/Toolbar"]
margin_left = 625.0
margin_right = 655.0
margin_bottom = 30.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 5 )

[node name="PanelMargin" type="MarginContainer" parent="MainCont"]
margin_top = 35.0
margin_right = 660.0
margin_bottom = 433.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MainCont/PanelMargin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 635.0
margin_bottom = 398.0
size_flags_vertical = 3

[node name="PanelCont" type="VBoxContainer" parent="MainCont/PanelMargin/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.0
margin_right = -11.0
margin_bottom = -11.0
custom_constants/separation = 0

[node name="Title" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont"]
margin_right = 588.0
margin_bottom = 27.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Tabs" type="TabContainer" parent="MainCont/PanelMargin/Panel/PanelCont"]
margin_top = 27.0
margin_right = 588.0
margin_bottom = 352.0
size_flags_vertical = 3
custom_styles/tab_fg = SubResource( 3 )
custom_styles/tab_bg = SubResource( 4 )
custom_styles/panel = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_bg = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
custom_constants/label_valign_fg = 0
custom_constants/label_valign_bg = 0

[node name="Worlds" type="Control" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 35.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Nothing" type="Control" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NotFound" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.37
margin_top = -55.47
margin_right = 52.6302
margin_bottom = -25.4698
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
text = "No Worlds !"

[node name="Create" type="Button" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.1
margin_top = -18.25
margin_right = -11.0999
margin_bottom = 22.75
text = "Create"

[node name="or" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -141.5
margin_right = 287.0
margin_bottom = 141.5
text = "or"
align = 1
valign = 1

[node name="Import" type="Button" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 11.69
margin_top = -18.25
margin_right = 81.69
margin_bottom = 22.75
text = "ImpoRt"

[node name="Items" type="VBoxContainer" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title2" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Items"]
margin_right = 574.0
margin_bottom = 27.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Title3" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Items"]
margin_top = 31.0
margin_right = 574.0
margin_bottom = 58.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Title4" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Worlds/Items"]
margin_top = 62.0
margin_right = 574.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Books" type="Control" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 35.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Nothing" type="Control" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NotFound" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.37
margin_top = -55.47
margin_right = 52.6302
margin_bottom = -25.4698
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
text = "No Books !"

[node name="Create" type="Button" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.1
margin_top = -18.25
margin_right = -11.0999
margin_bottom = 22.75
text = "Create"

[node name="or" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -141.5
margin_right = 287.0
margin_bottom = 141.5
text = "or"
align = 1
valign = 1

[node name="Import" type="Button" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Nothing"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 11.69
margin_top = -18.25
margin_right = 81.69
margin_bottom = 22.75
text = "ImpoRt"

[node name="Items" type="VBoxContainer" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title2" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Items"]
margin_right = 574.0
margin_bottom = 27.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Title3" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Items"]
margin_top = 31.0
margin_right = 574.0
margin_bottom = 58.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Title4" type="Label" parent="MainCont/PanelMargin/Panel/PanelCont/Tabs/Books/Items"]
margin_top = 62.0
margin_right = 574.0
margin_bottom = 89.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Project Manager"
align = 1

[node name="Copy" type="MarginContainer" parent="MainCont"]
editor/display_folded = true
margin_top = 437.0
margin_right = 660.0
margin_bottom = 462.0
custom_constants/margin_right = 5
custom_constants/margin_bottom = 4

[node name="Copyright" type="Label" parent="MainCont/Copy"]
margin_right = 655.0
margin_bottom = 21.0
grow_horizontal = 0
grow_vertical = 0
text = "Â© 2019 Luneal Labs. All Rights Reserved."
align = 2
[connection signal="gui_input" from="MainCont/ToolbarMargin/Toolbar" to="MainCont/ToolbarMargin/Toolbar" method="_on_Toolbar_gui_input"]
[connection signal="pressed" from="MainCont/ToolbarMargin/Toolbar/Minimize" to="MainCont/ToolbarMargin/Toolbar" method="_on_Minimize_pressed"]
[connection signal="pressed" from="MainCont/ToolbarMargin/Toolbar/Close" to="MainCont/ToolbarMargin/Toolbar" method="_on_Close_pressed"]
